--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 					<div style="padding: 5px;">禁漫天堂：<div style="display: inline;color: red">XXXXXX (6)</div></div>
 				</div>
 			</div>
-			<div style="height:50px;"></div>
+<!-- 			<div style="height:50px;"></div>
 			<div class="d_bor" style="padding: 5px;">
 				<h1 style="text-align:center;  font-size:24px;">App</h1>
 				<div style="padding: 5px;margin-bottom: 10px">IOS用户可在Safari点选下方工具栏中间「分享按钮」之「加入到主画面」</div>
@@ -109,7 +109,7 @@
 				<div style="padding: 5px;">绅士漫画<a style="padding: 5px;" href="https://www.wnacg.com/">官网 - icon</a></div>
 				<div style="padding: 5px;">pixiv<a style="padding: 5px;" href="https://www.pixiv.net/">官网 - icon</a></div>
 				<div style="padding: 5px;">禁漫天堂<a style="padding: 5px;" href="https://18comic.vip/">官网 - logo</a></div>
-			</div>
+			</div> -->
 		</div>
 	</body>
 	<!-- Swiper -->
